updated link to portfolio for https

--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -25,7 +25,7 @@
 			<button class="btn btn-primary" id="changeTemp">Change Temp</button>
 			<button class="btn btn-primary" id="getMoreGifs">Get New Gifs</button>
 			<button class="btn btn-primary" id="delete">Delete Gifs</button>
-			<a class="btn btn-primary" href="http://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
+			<a class="btn btn-primary" href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
 		</div>
 		<div class="row" id="messageDisplay"></div>
   </div>
