--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="container">
-    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="http://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
+    <a class="waves-effect waves-light btn blue lighten-2 hoverable" id="linkToPortfolio" href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
   </div>
 </body>
 </html>
