--- a/speedShapes/index.html
+++ b/speedShapes/index.html
@@ -70,7 +70,7 @@
 					<label class="btn btn-light active"><input type="radio" name="options" id="difficulty2">Getting the hang of it</label>
 					<label class="btn btn-light"><input type="radio" name="options" id="difficulty3">This is much too hard</label>
 				</div>
-				<a class="btn btn-info mt-auto" href="http://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
+				<a class="btn btn-info mt-auto" href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
 			</div>
 		</div>
 	</div>
