--- a/randomQuoteGenerator/index.html
+++ b/randomQuoteGenerator/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A random quote generator to view motivational quotes.">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Random Quote Generator</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
