--- a/twitchTV/index.html
+++ b/twitchTV/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="A simple website to see if a twitch streamer is online, see information about their stream and visit their page.">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Twitch TV Viewer</title>
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" async></script>
@@ -14,8 +15,19 @@
   <script src="scripts.js" async></script>
 </head>
 <body>
-  <div class="container"></div>
-  <a class="btn btn-info" href="https://www.natethedev.com/" target="_blank" rel="noopener" id="toPortfolio">Created by Nate Mallison</a>
-  <a id="photoCred" href="https://unsplash.com/@sveninho?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Mark Solarski"><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span >Sven Scheuermeier</span></a>
+  <div class="container">
+    <div class="row justify-content-end mt-3">
+      <div class="col-5">
+        <div class="input-group">
+          <input type="text" class="form-control" id="search" placeholder="Search for a streamer on Twitch TV" aria-label="Search for a streamer on Twitch TV" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-secondary" type="button">Search</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="btn btn-light" href="https://www.natethedev.com/" target="_blank" rel="noopener" id="toPortfolio">Created by Nate Mallison </a>
+  <a id="photoCred" href="https://unsplash.com/@sveninho?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Mark Solarski"><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span>Sven Scheuermeier</span></a>
 </body>
 </html>
