--- a/localWeather/index.html
+++ b/localWeather/index.html
@@ -20,13 +20,13 @@
 			<h1>Check your local weather by <em>Gif!</em></h1>
 			<h5>Enter a location below to find out the current weather. Please note results may be up for interpretation. <i class="fa fa-smile-o" aria-hidden="true"></i></h5>	
 		</div>
-		<div class="row d-flex justify-content-around mt-2">
-			<input type="text" name="gifType" class="form-control" id="query" placeholder="Anchorage, Alaska">
-			<button class="btn btn-primary" id="check">Check Weather</button>
-			<button class="btn btn-primary" id="changeTemp">Change Temp</button>
-			<button class="btn btn-primary" id="getMoreGifs">Get New Gifs</button>
-			<button class="btn btn-primary" id="delete">Delete Gifs</button>
-			<a class="btn btn-primary" href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
+		<div class="row d-flex justify-content-around align-content-center">
+			<input type="text" name="gifType" class="form-control mt-2" id="query" placeholder="Anchorage, Alaska">
+			<button class="btn btn-primary mt-2" id="check">Check Weather</button>
+			<button class="btn btn-primary mt-2" id="changeTemp">Change Temp</button>
+			<button class="btn btn-primary mt-2" id="getMoreGifs">Get New Gifs</button>
+			<button class="btn btn-primary mt-2" id="delete">Delete Gifs</button>
+			<a class="btn btn-primary mt-2" href="https://www.natethedev.com/" target="_blank" rel="noopener">Created by Nate Mallison</a>
 		</div>
 		<div class="row" id="messageDisplay"></div>
   </div>
