changed form element to div to allow event.preventDefault to work on enter/return press

--- a/twitchTV/index.html
+++ b/twitchTV/index.html
@@ -17,14 +17,14 @@
 <body>
   <div class="container d-flex flex-column flex-md-row justify-content-around align-items-center mt-2">
     <h2 class="mr-md-auto m-1">Twitch TV</h2>
-    <form class="form-inline m-1">
+    <div class="form-inline m-1">
       <div class="input-group">
         <input type="text" class="form-control" id="search" placeholder="Search for a streamer" aria-label="Search for a streamer">
         <div class="input-group-append">
           <button class="btn btn-secondary buttons" type="button" id="searchButton">Search</button>
         </div>
       </div>
-    </form>
+    </div>
     <div class="dropdown ml-md-2 ml-lg-5 m-1">
       <button class="btn btn-secondary dropdown-toggle buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           See popular streamers
