--- a/calculator/index.html
+++ b/calculator/index.html
@@ -17,44 +17,44 @@
     <div class="content">
       <div class="calculatorContainer">
         <div class="displayContainer">
-            <div class="slanted buttonDefault bot-left"><span class="slantedContent" id="display"></span></div>
+            <div class="button"><span class="" id="display"></span></div>
             <div></div>
         </div>
         <div class="row">
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton doubleWidth">Clear</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer" id="plusMinus"><span class="slantedContent calcButton">&plusmn;</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">&divide;</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton doubleWidth">Clear</span></div>
+          <div class="button calcButtonContainer" id="plusMinus"><span class=" calcButton">&plusmn;</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">&divide;</span></div>
         </div>
         <div class="row">
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">7</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">8</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">9</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">*</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">7</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">8</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">9</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">*</span></div>
         </div>
         <div class="row">
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">4</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">5</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">6</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">-</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">4</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">5</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">6</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">-</span></div>
         </div>
         <div class="row">
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">1</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">2</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">3</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">+</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">1</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">2</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">3</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">+</span></div>
         </div>
         <div class="row">
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">.</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton">0</span></div>
-          <div class="slanted buttonDefault bot-left calcButtonContainer"><span class="slantedContent calcButton doubleWidth">=</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">.</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton">0</span></div>
+          <div class="button calcButtonContainer"><span class="calcButton doubleWidth">=</span></div>
         </div>
       </div>
       <div class="footer">
-        <div class="slanted buttonDefault bot-left">
-          <a href="https://unsplash.com/photos/Skf7HxARcoc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener" class="slantedContent link">Photo by Markus Spiske</a>
+        <div class="button">
+          <a href="https://unsplash.com/photos/Skf7HxARcoc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener" class=" link">Photo by Markus Spiske</a>
         </div>
-        <div class="slanted buttonDefault bot-left">
-          <a href="https://www.natethedev.com/" target="_blank" rel="noopener" class="slantedContent link" \>Created by Nate Mallison</a>
+        <div class="button">
+          <a href="https://www.natethedev.com/" target="_blank" rel="noopener" class=" link" \>Created by Nate Mallison</a>
         </div>
       </div>
     </div>
