added keyboard input, fixed decimal overloading

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -21,32 +21,32 @@
             <div></div>
         </div>
         <div class="row">
-          <div class="button calcButtonContainer"><span class="calcButton doubleWidth">Clear</span></div>
-          <div class="button calcButtonContainer" id="plusMinus"><span class=" calcButton">&plusmn;</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">&divide;</span></div>
+          <div class="button calcButtonContainer" data-key="8"><span class="calcButton doubleWidth">Clear</span></div>
+          <div class="button calcButtonContainer" data-key="18" id="plusMinus"><span class=" calcButton">&plusmn;</span></div>
+          <div class="button calcButtonContainer" data-key="191"><span class="calcButton">&divide;</span></div>
         </div>
         <div class="row">
-          <div class="button calcButtonContainer"><span class="calcButton">7</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">8</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">9</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">*</span></div>
+          <div class="button calcButtonContainer" data-key="55"><span class="calcButton">7</span></div>
+          <div class="button calcButtonContainer" data-key="56"><span class="calcButton">8</span></div>
+          <div class="button calcButtonContainer" data-key="57"><span class="calcButton">9</span></div>
+          <div class="button calcButtonContainer" data-key="1111"><span class="calcButton">*</span></div>
         </div>
         <div class="row">
-          <div class="button calcButtonContainer"><span class="calcButton">4</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">5</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">6</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">-</span></div>
+          <div class="button calcButtonContainer" data-key="52"><span class="calcButton">4</span></div>
+          <div class="button calcButtonContainer" data-key="53"><span class="calcButton">5</span></div>
+          <div class="button calcButtonContainer" data-key="54"><span class="calcButton">6</span></div>
+          <div class="button calcButtonContainer" data-key="173"><span class="calcButton">-</span></div>
         </div>
         <div class="row">
-          <div class="button calcButtonContainer"><span class="calcButton">1</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">2</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">3</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">+</span></div>
+          <div class="button calcButtonContainer" data-key="49"><span class="calcButton">1</span></div>
+          <div class="button calcButtonContainer" data-key="50"><span class="calcButton">2</span></div>
+          <div class="button calcButtonContainer" data-key="51"><span class="calcButton">3</span></div>
+          <div class="button calcButtonContainer" data-key="3333"><span class="calcButton">+</span></div>
         </div>
         <div class="row">
-          <div class="button calcButtonContainer"><span class="calcButton">.</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton">0</span></div>
-          <div class="button calcButtonContainer"><span class="calcButton doubleWidth">=</span></div>
+          <div class="button calcButtonContainer" data-key="190"><span class="calcButton">.</span></div>
+          <div class="button calcButtonContainer" data-key="48"><span class="calcButton">0</span></div>
+          <div class="button calcButtonContainer" data-key="13"><span class="calcButton doubleWidth">=</span></div>
         </div>
       </div>
       <div class="footer">
