adjusted mobile styling

--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -13,12 +13,12 @@
 <div class="container-fluid">
   <div class="well main-background">
     <div class="row">
-      <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4">
+      <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-md-6 col-md-offset-3">
         <h1 class="text-primary text-center name well"><strong>Alan Turing</strong></h1>
       </div>
     </div>
   <div class="row">
-    <div class="well col-xs-6 col-xs-offset-3 quote">
+    <div class="well col-xs-12 col-md-6 col-md-offset-3 quote">
       <blockquote><p>"Sometimes it is the people no one can imagine anything of, who do the things no one can imagine."</p><footer><cite>Alan Turing</cite></footer></blockquote>
     </div>
   </div>
@@ -29,13 +29,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6 col-xs-offset-3 well">
+      <div class="well col-xs-12 col-md-6 col-md-offset-3">
         <p class="text-center description">Often hailed as the father of computer science and artificial intelligence. Alan Turing was an English Computer Scientist who's work cracking the German Enigma code in World War Two helped to end the war and saved countless lives.</p>
       </div>
     </div>
       <br>
       <div class="row">
-        <div class="col-xs-8 col-xs-offset-2 well">
+        <div class="well col-xs-12 col-md-8 col-md-offset-2">
           <p class="text-center"><em>Here is a brief synopsis of his life.</em></p>
             <ul class="list-group">
                 <li class="list-group-item"><strong>June 23rd, 1912:</strong> Born in Maida Vale, London.</li>
@@ -58,7 +58,7 @@
           </div>
         </div>
   <div class="row">
-    <div class="well col-xs-6 col-xs-offset-3 quote">
+    <div class="well col-xs-12 col-md-6 col-md-offset-3 quote">
       <blockquote><p>"The isolated man does not develop any intellectual power. It is necessary for him to be immersed in an environment of other men, whose techniques he absorbs during the first twenty years of his life. He may then perhaps do a little research of his own and make a very few discoveries which are passed on to other men. From this point of view the search for new techniques must be regarded as carried out by the human community as a whole, rather than by individuals."</p><footer><cite>Alan Turing</cite></footer></blockquote>
     </div>
   </div>
