basic timers and inputs all working, user feedback in title block, prevent selecting text, prevent changing break and session length while running

--- a/pomodoroTimer/index.html
+++ b/pomodoroTimer/index.html
@@ -50,10 +50,10 @@
       <img src="images/tomato.png" alt="Ripe Tomato">
     </div>
     <div class="card controlsContainer">
-      <p class="card options"><span class="control card" id="breakMinus">-</span> Break Length <span class="control card" id="breakAdd">+</span></p>
-      <p class="card options"><span class="control card" id="sessionMinus">-</span> Session Length <span class="control card" id="sessionAdd">+</span></p>
-      <p class="card">Start Timer</p>
-      <p class="card">Reset Timer</p>
+      <p class="card options"><span class="control input card" id="breakMinus">-</span> Break Length: <span id="breakLength">5:00</span><span class="control input card" id="breakAdd">+</span></p>
+      <p class="card options"><span class="control input card" id="sessionMinus">-</span> Session Length: <span id="sessionLength">25:00</span><span class="control input card" id="sessionAdd">+</span></p>
+      <p class="card control" id="start">Start Timer</p>
+      <p class="card control" id="reset">Reset Timer</p>
       <a class="card" href="https://www.flaticon.com/" target="_blank" rel="noreferrer">Tomato by Freepik on Flaticon</a>
       <a class="card" href="https://www.flaticon.com/" target="_blank" rel="noreferrer">Beer Mug by Smashicons on Flaticon</a>
       <a class="card" href="https://www.natethedev.com" target="_blank" rel="noreferrer">Created by Nate Mallison</a>
