updated tomato png, finished clock like animation on tomato and beer images

--- a/pomodoroTimer/index.html
+++ b/pomodoroTimer/index.html
@@ -54,8 +54,8 @@
       <p class="card options"><span class="control input card" id="sessionMinus">-</span> Session Length: <span id="sessionLength">25:00</span><span class="control input card" id="sessionAdd">+</span></p>
       <p class="card control" id="start">Start Timer</p>
       <p class="card control" id="reset">Reset Timer</p>
-      <a class="card" href="https://www.flaticon.com/" target="_blank" rel="noreferrer">Tomato by Freepik on Flaticon</a>
-      <a class="card" href="https://www.flaticon.com/" target="_blank" rel="noreferrer">Beer Mug by Smashicons on Flaticon</a>
+      <a class="card" href="https://www.flaticon.com/free-icon/tomato_199620#term=tomato&page=1&position=9" target="_blank" rel="noreferrer">Tomato by Freepik on Flaticon</a>
+      <a class="card" href="https://www.flaticon.com/free-icon/pint_135759#term=beer&page=1&position=1" target="_blank" rel="noreferrer">Beer Mug by Smashicons on Flaticon</a>
       <a class="card" href="https://www.natethedev.com" target="_blank" rel="noreferrer">Created by Nate Mallison</a>
     </div>
   </div>
