--- a/pomodoroTimer/index.html
+++ b/pomodoroTimer/index.html
@@ -52,8 +52,8 @@
     <div class="card controlsContainer">
       <p class="card options"><span class="control input card" id="breakMinus">-</span> Break Length: <span id="breakLength">5:00</span><span class="control input card" id="breakAdd">+</span></p>
       <p class="card options"><span class="control input card" id="sessionMinus">-</span> Session Length: <span id="sessionLength">25:00</span><span class="control input card" id="sessionAdd">+</span></p>
-      <p class="card control" id="start">Start Timer</p>
-      <p class="card control" id="reset">Reset Timer</p>
+      <p class="card mainControl" id="start">Start Timer</p>
+      <p class="card mainControl" id="reset">Reset Timer</p>
       <a class="card" href="https://www.flaticon.com/free-icon/tomato_199620#term=tomato&page=1&position=9" target="_blank" rel="noreferrer">Tomato by Freepik</a>
       <a class="card" href="https://www.flaticon.com/free-icon/pint_135759#term=beer&page=1&position=1" target="_blank" rel="noreferrer">Beer Mug by Smashicons</a>
       <a class="card" href="https://www.natethedev.com" target="_blank" rel="noreferrer">Created by Nate Mallison</a>
